[metadata]
name = Signal_ProcessingandFiltering_Library
version = 0.0.4
author = Manu Miangolarra
author_email = mmiangol@gmail.com
description = Library for signal processing and filtering of accelerometer data
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mmiangol
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages =
    Library_Data
package_dir =
    =Signal_ProcessingandFiltering_Library
python_requires = >=3.7
include_package_data = True
